align bug fix

--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ h2{
 /*galeria*/
 .gallery{
     align-items: center;
+    justify-content: center;
     background: #111111;
     display: flex;
     padding-bottom: 100px;
@@ -139,7 +140,9 @@ h2{
     border-radius: 15px;
     object-fit: cover;
     box-shadow: 4px 4px 8px rgb(46, 46, 46);
+    margin-left: calc(25%);
 }
+
 .gallery-picture:hover, .gallery-picture:active{
     transform: scale(1.05);
     transition: .5s;
@@ -319,14 +322,11 @@ footer ul{
         }
     }
 
-
-
-    /*galeria*/
-
     .gallery-picture{
         width: 300px;
         height: 160px;
         border: 1px rgb(0, 0, 0) solid;
+        margin-left: 0px;
     }
 
     .mobile-none{
